dictionary-app/css/style.css
/* For mobile */
body {
  background: #00004d;
}

h1 {
  color: cornflowerblue;
  font-size: 20px;
  font-family: 'Lato', sans-serif;
  text-shadow: 2px 2px black;
  cursor: pointer;
  justify-content: center;
  margin: auto;
  margin-bottom: 20px;
  margin-top: 40px;
  border-top: 3px solid lightsteelblue;
  border-bottom: 3px solid lightsteelblue;
}

.openModal:hover {
  color: lightsteelblue;
}

h2 {
  color: cornflowerblue;
  margin-bottom: 20px;
  font-size: 15px;
  font-family: 'Lato', sans-serif;
}

img {
  margin-bottom: 20px;
}

a {
  text-decoration: none;
  color: lightsteelblue;
}
.container {
  display: block;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.card {
  width: 200px;
  height: 100px;
  border: 2px solid black;
  justify-content: center;
  align-items: center;
  background-color: cornflowerblue;
  border-top: 3px solid black;
  border-right: 3px solid black;
  border-left: 3px solid black;
  margin: auto;
  text-align: center;
  display: block;
  padding-top: 60px;
  font-size: 15px;
  padding: 10px;
}

audio {
margin: auto;
position: relative;
top: -90px;
justify-content: center;
display: block;
width: 200px;
height: 20px;
}

.definition {
  width: 200px;
  height: 140px;
  background-color: darkgrey;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  top: -90px;
  border-bottom: 3px solid black;
  border-right: 3px solid black;
  border-left: 3px solid black;
  border-top: 1px solid black;
  margin: auto;
  font-size: 15px;
  padding: 10px;
}

.part-of-speech {
  font-style: italic;
  padding: 5px;
  padding-bottom: 15px;
  position: relative;
  top: -5px;
}

.definition-text {
  position: relative;
  top: -15px;
  margin: 5px;
  padding: 5px;
}

button {
  height: 25px;
  width: 150px;
  position: relative;
  right: -185px;
  top: -30px;
  margin: 40px;
}

.button-holder {
  position:relative;
  top: -20px;
}

.carousel-button {
  text-align: center;
  font-size: 20px;
  color: black;
  justify-content: center;
  cursor: pointer;
  position: relative;
  top: -80px;
  padding: 5px;
  margin: 5px;
}

.previous {
  float: left;
  position: relative;
  left: -20px;
}

.next {
  float: right;
  position: relative;
  right: -20px;
}

.generate-button {
    margin: auto;
    justify-content: center;
    align-items: center;
    background-color: white;
    color: black;
    width: 80%;
    height: 25px;
    text-align: center;
    cursor: pointer;
    font-size: 10px;
    padding-top: 10px;
    margin-bottom: 100px;
    cursor: pointer;
    border-radius: 5px;
}

#modal {
  background-color: rgba(0,0,0,0.4);
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 1;
  overflow: auto;
  display: none;
}

#modal-textbox {
  background-color: lightsteelblue;
  height: 60%;
  width: 80%;
  border-radius: 2px;
  margin: 150px auto;
  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
  text-align: center;
  border-radius: 2px;
  font-family: 'Lato', sans-serif;
}

#modal-heading {
  font-size: 20px;
  text-shadow: 1px 1px black;
  margin-bottom: 10px;
}

#close {
position: relative;
left: 5px;
top: -50px;
cursor: pointer;
}

/* For desktop */
@media (min-width: 600px){
  h1 {
    font-size: 50px;
    margin-bottom: 30px;
  }

  h2 {
    font-size: 20px;
  }

  .card {
    width: 410px;
    height: 120px;
    padding-top: 30px;
    font-size: 20px;
  }

  audio {
  position: relative;
  top: -60px;
  width: 200px;
  height: 30px;
  }

  .definition {
    width: 410px;
    height: 150px;
    top: -60px;
    padding-top:30px;
    font-size: 20px;
  }

  .part-of-speech {
    position: relative;
    top: -15px;
  }

  .definition-text {
    position: relative;
    top: -15px;
    right: -40px;
    width: 300px;
  }

  .carousel-button {
    font-size: 30px;
  }
  .generate-button {
    width: 250px;
    height:20px;
    margin-bottom: 80px;
    font-size: 20px;
    padding: 10px;
  }

  #modal-textbox {
    height: 300px;
    width: 550px;
    margin: 150px auto;
    font-size: 20px;
  }

  #modal-textbox > p {
    position: relative;
    top: -40px;
  }

  #close {
    margin-top: 50px;
    position: relative;
    left: -5px;
    top: -30px;
  }

  #modal-heading {
    font-size: 30px;
    padding: 10px;
    text-shadow: 1px 1px black;
    margin-bottom: 50px;
  }
}

